@@ -13,10 +13,9 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.function.BiConsumer;
-import java.util.function.BiFunction;
 import java.util.function.Consumer;
+import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import net.minecraft.core.Registry;
 import net.minecraft.data.CachedOutput;
 import net.minecraft.data.DataGenerator;
@@ -34,15 +33,16 @@ import org.slf4j.Logger;
 public class ModelProvider
 implements DataProvider {
     private static final Logger LOGGER = LogUtils.getLogger();
-    private final DataGenerator generator;
+    private final DataGenerator.PathProvider blockStatePathProvider;
+    private final DataGenerator.PathProvider modelPathProvider;
 
     public ModelProvider(DataGenerator dataGenerator) {
-        this.generator = dataGenerator;
+        this.blockStatePathProvider = dataGenerator.createPathProvider(DataGenerator.Target.RESOURCE_PACK, "blockstates");
+        this.modelPathProvider = dataGenerator.createPathProvider(DataGenerator.Target.RESOURCE_PACK, "models");
     }
 
     @Override
     public void run(CachedOutput cachedOutput) {
-        Path path = this.generator.getOutputFolder();
         HashMap map = Maps.newHashMap();
         Consumer<BlockStateGenerator> consumer = blockStateGenerator -> {
             Block block = blockStateGenerator.getBlock();
@@ -62,7 +62,7 @@ implements DataProvider {
         Consumer<Item> consumer2 = set::add;
         new BlockModelGenerators(consumer, biConsumer, consumer2).run();
         new ItemModelGenerators(biConsumer).run();
-        List list = Registry.BLOCK.stream().filter(block -> !map.containsKey(block)).collect(Collectors.toList());
+        List<Block> list = Registry.BLOCK.stream().filter(block -> !map.containsKey(block)).toList();
         if (!list.isEmpty()) {
             throw new IllegalStateException("Missing blockstate definitions for: " + list);
         }
@@ -78,28 +78,19 @@ implements DataProvider {
                 }
             }
         });
-        this.saveCollection(cachedOutput, path, map, ModelProvider::createBlockStatePath);
-        this.saveCollection(cachedOutput, path, map2, ModelProvider::createModelPath);
+        this.saveCollection(cachedOutput, map, block -> this.blockStatePathProvider.json(block.builtInRegistryHolder().key().location()));
+        this.saveCollection(cachedOutput, map2, this.modelPathProvider::json);
     }
 
-    private <T> void saveCollection(CachedOutput cachedOutput, Path path, Map<T, ? extends Supplier<JsonElement>> map, BiFunction<Path, T, Path> biFunction) {
+    private <T> void saveCollection(CachedOutput cachedOutput, Map<T, ? extends Supplier<JsonElement>> map, Function<T, Path> function) {
         map.forEach((object, supplier) -> {
-            Path path2 = (Path)biFunction.apply(path, object);
+            Path path = (Path)function.apply(object);
             try {
-                DataProvider.saveStable(cachedOutput, (JsonElement)supplier.get(), path2);
+                DataProvider.saveStable(cachedOutput, (JsonElement)supplier.get(), path);
             } catch (Exception exception) {
-                LOGGER.error("Couldn't save {}", (Object)path2, (Object)exception);
+                LOGGER.error("Couldn't save {}", (Object)path, (Object)exception);
             }
         });
-    }
-
-    private static Path createBlockStatePath(Path path, Block block) {
-        ResourceLocation resourceLocation = Registry.BLOCK.getKey(block);
-        return path.resolve("assets/" + resourceLocation.getNamespace() + "/blockstates/" + resourceLocation.getPath() + ".json");
-    }
-
-    private static Path createModelPath(Path path, ResourceLocation resourceLocation) {
-        return path.resolve("assets/" + resourceLocation.getNamespace() + "/models/" + resourceLocation.getPath() + ".json");
     }
 
     @Override
